--- a/package.json
+++ b/package.json
@@ -2,6 +2,8 @@
   "name": "quote-card-generator",
   "version": "1.0.0",
   "scripts": {
+    "clean": "rimraf dist",
+    "build:clean": "rimraf dist && webpack --config webpack.config.js",
     "build": "webpack --config webpack.config.js",
     "watch": "webpack --watch --config webpack.config.js"
   },
