--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
     "clean": "rimraf dist",
     "build:clean": "rimraf dist && webpack --config webpack.config.js",
     "build": "webpack --config webpack.config.js",
-    "watch": "webpack --watch --config webpack.config.js"
+    "watch": "webpack --watch --config webpack.config.js",
+    "start": "webpack serve --config webpack.config.js --mode development"
   },
   "dependencies": {
     "html2canvas": "^1.4.1",
@@ -26,7 +27,8 @@
     "style-loader": "^3.3.1",
     "tailwindcss": "^2.2.19",
     "webpack": "^5.64.0",
-    "webpack-cli": "^4.9.1"
+    "webpack-cli": "^5.1.4",
+    "webpack-dev-server": "^4.15.2"
   },
   "main": "App.js",
   "keywords": [],
