--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "css-loader": "^6.5.1",
     "postcss": "^8.3.11",
     "postcss-loader": "^6.2.0",
+    "rimraf": "^6.0.1",
     "style-loader": "^3.3.1",
     "tailwindcss": "^2.2.19",
     "webpack": "^5.64.0",
